refactor(components): add shared folder

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,9 +8,8 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/shared/components/*"]
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
