--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "preview": "vite preview",
     "docs": "storybook dev -p 6006",
     "build:docs": "storybook build",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run --browser chrome --headless",
     "postinstall": "husky install"
   },
   "dependencies": {
@@ -38,10 +40,12 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.25.0",
     "@storybook/react-vite": "^9.0.12",
+    "@testing-library/cypress": "^10.0.3",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.5.2",
+    "cypress": "^14.5.0",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.0",
